--- a/01. FirstStepsInCoding/03. Nums1To20/03. Nums1To20.csproj
+++ b/01. FirstStepsInCoding/03. Nums1To20/03. Nums1To20.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Nums1To20.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
