--- a/01. FirstStepsInCoding/06. SquareOfStars/06. SquareOfStars.csproj
+++ b/01. FirstStepsInCoding/06. SquareOfStars/06. SquareOfStars.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SquareOfStars.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
