--- a/02. SimpleCalculations/01. SquareArea/01. SquareArea.csproj
+++ b/02. SimpleCalculations/01. SquareArea/01. SquareArea.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SquareArea.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
