--- a/02. SimpleCalculations/07. 2DRectangleArea/07. 2DRectangleArea.csproj
+++ b/02. SimpleCalculations/07. 2DRectangleArea/07. 2DRectangleArea.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="2DRectangleArea.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
