--- a/03. SimpleConditions/13. AreaOfFigures/13. AreaOfFigures.csproj
+++ b/03. SimpleConditions/13. AreaOfFigures/13. AreaOfFigures.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AreaOfFigures.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
