--- a/04. ComplexConditions/09. DayOfWeek/09. DayOfWeek.csproj
+++ b/04. ComplexConditions/09. DayOfWeek/09. DayOfWeek.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DayOfWeek.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
