--- a/04. ComplexConditions/13. PointInTheFigure/13. PointInTheFigure.csproj
+++ b/04. ComplexConditions/13. PointInTheFigure/13. PointInTheFigure.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PointInTheFigure.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
