Update: Refactoring all classes' names.

--- a/05. SimpleLoops/01. NumbersFrom1To100/01. NumbersFrom1To100.csproj
+++ b/05. SimpleLoops/01. NumbersFrom1To100/01. NumbersFrom1To100.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NumbersFrom1To100.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
