--- a/05. SimpleLoops/11. OddEvenPosition/11. OddEvenPosition.csproj
+++ b/05. SimpleLoops/11. OddEvenPosition/11. OddEvenPosition.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OddEvenPosition.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
