--- a/05. SimpleLoops/15. SmartLili/15. SmartLili.csproj
+++ b/05. SimpleLoops/15. SmartLili/15. SmartLili.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SmartLili.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
