--- a/06. DrawingWithLoops/02. RectangleOfNxNStars/02. RectangleOfNxNStars.csproj
+++ b/06. DrawingWithLoops/02. RectangleOfNxNStars/02. RectangleOfNxNStars.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RectangleOfNxNStars.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
