--- a/06. DrawingWithLoops/03. SquareOfStars/03. SquareOfStars.csproj
+++ b/06. DrawingWithLoops/03. SquareOfStars/03. SquareOfStars.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SquareOfStars.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
