--- a/06. DrawingWithLoops/11. Fortress/11. Fortress.csproj
+++ b/06. DrawingWithLoops/11. Fortress/11. Fortress.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Fortress.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
