--- a/06. DrawingWithLoops/19. FallenInLove/19. FallenInLove.csproj
+++ b/06. DrawingWithLoops/19. FallenInLove/19. FallenInLove.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FallenInLove.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
