--- a/06. DrawingWithLoops/20. Eclipse/20. Eclipse.csproj
+++ b/06. DrawingWithLoops/20. Eclipse/20. Eclipse.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Eclipse.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
