--- a/07. AdvancedLoops/01. Numbers1ToNWithStep3/01. Numbers1ToNWithStep3.csproj
+++ b/07. AdvancedLoops/01. Numbers1ToNWithStep3/01. Numbers1ToNWithStep3.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Numbers1ToNWithStep3.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
