--- a/07. AdvancedLoops/02. NumbersNTo1/02. NumbersNTo1.csproj
+++ b/07. AdvancedLoops/02. NumbersNTo1/02. NumbersNTo1.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NumbersNTo1.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
