--- a/07. AdvancedLoops/13. NumberPyramid/13. NumberPyramid.csproj
+++ b/07. AdvancedLoops/13. NumberPyramid/13. NumberPyramid.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NumberPyramid.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
