--- a/09. ExamPreparationII/02. Pets/02. Pets.csproj
+++ b/09. ExamPreparationII/02. Pets/02. Pets.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pets.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
