--- a/09. ExamPreparationII/04. SoftUniCamp/04. SoftUniCamp.csproj
+++ b/09. ExamPreparationII/04. SoftUniCamp/04. SoftUniCamp.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SoftUniCamp.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
